Issue #2365095 by eshta: Change message box z-index to display above Superfish menu.

--- a/css/acquia_lift.messagebox.css
+++ b/css/acquia_lift.messagebox.css
@@ -5,7 +5,7 @@
   min-width: 50%;
   max-width: 80%;
   padding: 1em;
-  z-index: 200;
+  z-index: 500;
   margin: 0 auto;
   left: 0;
   right: 0;
